# duckweed_tools

./: .gitignore  README.md
.github/workflows/: android-build.yml
duckweed_tools_android/: build.gradle.kts  gradle.properties  settings.gradle.kts
duckweed_tools_android/app/: build.gradle.kts  debug.keystore
duckweed_tools_android/app/src/main/: AndroidManifest.xml
duckweed_tools_android/app/src/main/java/com/duckweed/toolkit/: MainActivity.kt
duckweed_tools_rust/: Cargo.toml
duckweed_tools_rust/src/: lib.rs  main.rs  server.rs
duckweed_tools_rust/src/api/: catalog.rs  container.rs  dosing.rs  ec.rs  images.rs  log.rs  mod.rs  simulator.rs  stock.rs
duckweed_tools_rust/src/calc/: composition.rs  dosing.rs  ec.rs  mod.rs  scheduler.rs  simulator.rs  stock.rs
duckweed_tools_rust/src/data/: mod.rs  profiles.rs  store.rs
duckweed_tools_rust/src/log/: manager.rs
duckweed_tools_rust/tests/: dosing_tests.rs  integration_tests.rs  simulator_tests.rs
duckweed_tools_rust/web/: app.js  index.html  style.css  sw.js
