[package]
name = "duckweed-server"
version = "1.0.0"
edition = "2021"
description = "Duckweed & Cultivation Toolkit — single-binary web server"

[lib]
name = "duckweed_server"
path = "src/lib.rs"

[[bin]]
name = "duckweed-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
